fixed title-text -was created a larger than screen width view on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -102,7 +102,7 @@ label {
 }
 
 .title-large {
-    font-size: 4rem;
+    font-size: 2.5rem;
     text-align: center;
     color: var(--white);
     text-shadow: black 10px 10px 25px;
